# TemperatureMonitor

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
.github/workflows/: cmake.yml
cmake/Modules/: FindLibKnxUsb.cmake
src/: CMakeLists.txt  temperature-client.c  temperature-server.c  temperature-to-cloud.py  temperature-to-file.py
test/: CMakeLists.txt  test_temperature-server.c
utils/: CMakeLists.txt  temperature-monitor.logrotate  temperature-server.service.in  temperature-to-cloud.ini  temperature-to-cloud.service.in
